tests/paczka1/small_fuzzy/97832838.err
Error in line 4: adOek0QXVSr A754 1,9
Error in line 7: Z2aM5ij S230 34,9
Error in line 11: WGNwUZIpJoM S652 21,6
Error in line 6: 6oWeCyze5N S230 18,2
